crates/cistell-core/tests/ui/not_a_struct.stderr
error: #[config(prefix = "...")] is required on the struct
 --> tests/ui/not_a_struct.rs:4:1
  |
4 | enum NotAStruct {
  | ^^^^
