crates/cistell-core/tests/ui/not_a_struct.rs
use cistell_core::Config;

#[derive(Config)]
enum NotAStruct {
    A,
    B,
}

fn main() {}
